deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 443  # Serve HTTPS inside container
        volumeMounts:
        # TLS certificate + key
        - name: tls
          mountPath: /etc/nginx/tls
          readOnly: true
        # NGINX config
        - name: conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      # TLS Secret
      - name: tls
        secret:
          secretName: nginx-tls-secret
      # ConfigMap for nginx.conf
      - name: conf
        configMap:
          name: nginx-conf
