service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
  namespace: raushan
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 443
    targetPort: 443
    nodePort: 30443
    protocol: TCP
