gateway.yaml
apiVersion: networking.istio.io/v1beta1

kind: Gateway

metadata:
  name: nginx-gateway
  namespace: raushan

spec: 
  selector:
    istio: ingressgateway #istio-proxy
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - nginx.local
  - port: 
      number: 443
      name: https
      protocol: HTTPS
    hosts: 
        - nginx.local
    tls: 
      mode: SIMPLE
      credentialName: nginx-tls-secret #tls secret

# the Istio Ingress Gateway is expected to handle the encryption/decryption process.
